--- a/app/css/main.css
+++ b/app/css/main.css
@@ -90,6 +90,22 @@ header {
     margin-right: -22px;
     border-left: 1px solid #eeeeee; }
 
+.nav-menu {
+  border-bottom: 1px solid #E0E5DF;
+  background-color: white; }
+  .nav-menu nav ul {
+    display: inline-block; }
+  .nav-menu li {
+    list-style: none;
+    display: inline-block;
+    margin-left: 40px;
+    font-size: 12px;
+    padding: 5px; }
+    .nav-menu li a {
+      text-decoration: none;
+      font-size: 12px;
+      color: black; }
+
 h3 {
   text-align: left;
   font-family: Arial, sans-serif;
@@ -188,5 +204,30 @@ h3 {
           border-radius: 4px; }
         .smallBox aside .bottomAside .price input[type="text"]:focus {
           outline: none; }
+    .smallBox aside .color-filter ul {
+      padding-left: 0; }
+    .smallBox aside .color-filter li {
+      width: 22px;
+      height: 22px;
+      border: 1px solid #E0E5DF;
+      border-radius: 4px;
+      list-style: none;
+      display: inline-block; }
+    .smallBox aside .red {
+      background-color: #FF0002; }
+    .smallBox aside .orange {
+      background-color: #FF7100; }
+    .smallBox aside .yellow {
+      background-color: #F6D000; }
+    .smallBox aside .green {
+      background-color: #00CF08; }
+    .smallBox aside .blue {
+      background-color: #00D0F7; }
+    .smallBox aside .purple {
+      background-color: #BC00F5; }
+    .smallBox aside .black {
+      background-color: #000000; }
+    .smallBox aside .white {
+      background-color: #FFFFFF; }
 
 /*# sourceMappingURL=main.css.map */
